Adjust hack dealing with the root scrollable frame to only map <body> to it in quirks mode and to map <html> to it in both quirks and standards mode.  This is more or less compatible with what IE6/Windows does.  Bug 211030, r+sr=jst